--- a/Resume.html
+++ b/Resume.html
@@ -15,15 +15,22 @@
         font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
     table{
-        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
         border: double;
-
         text-align: center;
+        width: 600px; 
+        border-collapse: collapse; 
       
     }
+  td, th {
+            padding: 10px; 
+            border: 1px solid #000;
+        }
+        
 </style>
 <body>
-    <table border="1" style="text-align: center; width: 600px">
+    <table>
         <tr>
             <td>
                 <h1 style="text-align: center;">RESUME</h1>
@@ -36,7 +43,7 @@
     <h2 style="background-color: rgb(177, 172, 172);">Objective:</h2>
     <p><i>I want to excel in this field with hard work,preseverance and dedication</i></p>
     <h2 style="background-color: rgb(177, 172, 172);">Education Qualifications:</h2>
-    <table border="1" style="border-collapse: collapse;" >
+    <table >
         <tr>
             <th>Courses</th>
             <th>Institute</th>
